[Feat] Add resiliancy to SSE client.
Signed-off-by: Paul Amonson <paul.d.amonson@intel.com>